tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__Steamstomping-s6AEHSKiQe2XveT_oDZbZg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2495629632367647590,
  "prerequisites": [
    3513441395399994532
  ],
  "properties": {
    "auto_claim": false,
    "desc": "While the Forge Hammer is quite fast already, why not build this upscaled version and make it even faster? With the Steam Presser, you can unleash the full force of steam on whatever material you feed it. Watch blocks break apart and rods get smashed together faster than ever-at least until you gain access to more advanced technology.\n\n§3The Steam Presser can only process recipes up to LV Tier.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Steam stomping!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3513441395399994532
  ],
  "rewards": [],
  "tasks": []
}
