tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__T2MacerationStac-A4rEQOAXQsaa26Ib_nzkHg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 16147448411400758302,
  "prerequisites": [
    1416,
    1707,
    1421
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Upgrade your Maceration Stack by replacing all the casings with Maceration Stack Casings and then placing the Upgrade Chip into the slot in the controller.\n\nThe Tier 2 Maceration stack has 4x more parallels!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "T2 Maceration Stack ",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1416,
    1707,
    1421
  ],
  "rewards": [],
  "tasks": []
}
