tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__YouSmellLikeaDis-AAAAAAAAAAAAAAAAAAADAA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 768,
  "prerequisites": [
    160,
    8148220388809046234
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This bad boy will tremendously boost the byproducts of your cracked fuel or pyrolyse oven. This way you can make industrial TNT, polyethylene, polytetrafluoroethylene and other plastics more efficiently. You'll also need this for the platline.\n\nYou'll need to make EV circuits in a cleanroom to build this machine.\n\nFor hatches, you can choose your own tier. 1 MV energy does most of the useful recipes. 2 MV energy or 1 HV energy hatch will cover almost all the rest.\n\nYou will need 1 input hatch, and at least 5 output hatches. An output bus will capture any solid outputs.\n\n[note]PS: I listed all the DT recipes on the spreadsheet for you to look at in a convenient format. Now you can easily compare which oil path to take![/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "You Smell Like a Distillery!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    160,
    8148220388809046234
  ],
  "rewards": [],
  "tasks": []
}
