tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__ZzzZZZzzzZtt-AAAAAAAAAAAAAAAAAAAH8g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2034,
  "prerequisites": [
    12880365575383562570
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Need lots of oxygen or hydrogen, or just want to rip apart materials for tons of aluminium?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "ZzzZZZzzzZtt",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    12880365575383562570
  ],
  "rewards": [],
  "tasks": []
}
