tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__withthepowerofsc-bLAFkZX-RHGRFAz-C93aeQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 10808151408056851065,
  "prerequisites": [
    12038758990578169035,
    2610
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This multiblock will allow you to use all that UU-Matter that your Matter Fabricator makes, not that you don't have anything else to do with it...\n\n[note]This multi is traditionally UV, but can technically be made in ZPM.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "...with the power of science!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    12038758990578169035,
    2610
  ],
  "rewards": [],
  "tasks": []
}
